# Face-Detection-Car

./: LICENSE  readme.md  tracking.cpp
detection-on-Android-phone/: androidFaceDetectionAndTracking.slx  android_car.cpp  asrt.py  obstacle_avoidance.c  out.txt  readme.md  trail_following.c
detection-on-Android-phone/VirtualMic/: VirtualMic.sh  murmur.ini  murmur.sqlite
detection-on-board/: CMakeLists.txt  README.md
